# v16_slimdesk_navigator

./: .pre-commit-config.yaml  ANNOUNCEMENT_DRAFT.md  CHANGELOG.md  README.md  create_repo.json  pyproject.toml
v16_slim_desk/: __init__.py  hooks.py  modules.txt
v16_slim_desk/public/css/: v16_slim_desk.css
v16_slim_desk/public/js/: v16_slim_desk.js
