[project]
name = "v16_slim_desk"
version = "3.75.0"
description = "Office 365 style sidebar"
authors = [
    { name = "Antigravity", email = "admin@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
dynamic = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["v16_slim_desk"]
include-package-data = true

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
    "UP030",
    "UP031",
    "UP032",
    "UP037",
    "UP040",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
